# grm

./: CLAUDE.md  Cargo.toml  README.md
src/: commands.rs  configs.rs  container.rs  discovery.rs  errors.rs  main.rs  utils.rs  verbs.rs
src/adapters/: git_cli.rs  mod.rs  terminal_interaction.rs  unix_fs.rs
src/adapters/ports/: file_system.rs  git_repository.rs  user_interaction.rs
src/adapters/test_helpers/: mock_file_system.rs  mock_git_repository.rs  mock_user_interaction.rs  mod.rs
src/configs/: default_provider.rs  env_provider.rs  gitconfig_provider.rs  grmrc_provider.rs  provider.rs
src/core/: mod.rs  repo_info.rs  repo_scanner.rs  shared_resource.rs
src/core/ports/: file_system.rs  git_repository.rs  mod.rs  user_interaction.rs
src/usecases/: clone_repository.rs  list_repositories.rs  mod.rs  remove_repository.rs  show_root.rs
src/usecases/worktree/: isolate_files.rs  mod.rs  remove_worktree.rs  share_files.rs  split_worktree.rs  unshare_files.rs
src/utils/: discover.rs  git.rs  git_url.rs  path.rs  prompt.rs
src/verbs/: clone.rs  list.rs  remove.rs  root.rs  worktree.rs
src/verbs/worktree/: isolate.rs  remove.rs  share.rs  split.rs  unshare.rs
