[package]
name = "grm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
config = { version = "0.15.19", features = ["toml"] }
git2 = "0.20.2"
thiserror = "2.0.17"
toml = "0.9.8"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
