[package]
name = "grm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dirs = "5.0"
git2 = "0.20.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dev-dependencies]
tempfile = "3.23.0"
